# -6780

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  about.html  app.js  auto_transfer_log.md  benefits.html  create_public_repo.command  docker-compose.yml  ecosystem.config.js  entry.html  faq.html  generate-contract.js  index.html  interview.html  jobs.html  location_map.md  manual_transfer_guide.md  package.json  privacy.html  slack-manifest.yaml  slack-modal.js  slack_findings.md
bc-pipeline/: auth.py  (+31 more)
telegram-ai-bot/: .env.example  .gitignore  README.md  bot.py  claude_code_bridge.py  line_agent.py  line_agent.requirements.txt  mega_bot.py  pyproject.toml  realtime_agent.py  requirements.txt  run_line.sh  semantic_search.py  setup-slack-sync.sh  setup_line_ngrok.sh  slack_bot.py  slack_bot.requirements.txt  slack_import.py  slack_search.py  slack_sync.py  voice_agent.py  voice_agent.requirements.txt  運用ルール.md
telegram-ai-bot/deploy/: com.example.line-bot.plist  com.example.telegram-bot.plist  com.openclaw.slack-sync.plist
telegram-ai-bot/tac/: .env.example  README.md  __init__.py  business_info.example.md  business_info.md  check.py  config.py  connector.py  demo.py  handoff.py  intelligence.py  llm.py  memory.py  models.py  operators.py  realtime.py  realtime.requirements.txt  requirements.txt  run_prod.sh  server.py  studio_flow.py  tools.py
telegram-ai-bot/tac/tests/: test_tac.py
telegram-ai-bot/tests/: test_check.py  test_handoff_voice.py  test_helpers.py  test_llm.py  test_quality.py  test_studio_flow.py  test_tac.py
(+53 files in other folders)
